fixup! Bug 32308: use direct browser sizing for letterboxing. Bug 30556: align letterboxing with 200x100 new win width stepping
Bug 41259: Do not interfere with devtools responsive mode sizing.

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -140,7 +140,7 @@ body {
   Never modify the following selector without synchronizing
   LETTERBOX_CSS_SELECTOR in RFPHelper.jsm!
 **/
-.letterboxing .browserStack:not(.exclude-letterboxing) > browser {
+.letterboxing .browserContainer:not(.responsive-mode) > .browserStack:not(.exclude-letterboxing) > browser {
   /* width & height to be dynamically set by RFPHelper.jsm */
   outline: 1px solid var(--chrome-content-separator-color);
 }
@@ -149,7 +149,7 @@ body {
   outline: initial;
 }
 
-:root:not([inDOMFullscreen]) .letterboxing.letterboxing-ready .browserStack:not(.exclude-letterboxing) {
+:root:not([inDOMFullscreen]) .letterboxing.letterboxing-ready .browserContainer:not(.responsive-mode) > .browserStack:not(.exclude-letterboxing) {
   place-content: start center;
 }
 
